14-kubecloud-03-network-K8S/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: network-multitool
        image: wbitt/network-multitool
        ports:
          - containerPort: 443

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  labels:
    app: cache
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
      - name: network-multitool
        image: wbitt/network-multitool
        ports:
          - containerPort: 443

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: network-multitool
        image: wbitt/network-multitool
        ports:
          - containerPort: 443

---

apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - name: network-multitool
      port: 443
      protocol: TCP
  selector:
    app: backend

---

apiVersion: v1
kind: Service
metadata:
  name: cache
spec:
  ports:
    - name: network-multitool
      port: 443
      protocol: TCP
  selector:
    app: cache

---

apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - name: network-multitool
      port: 443
      protocol: TCP
  selector:
    app: frontend
